docs: MJC deserves to be an authors of SC/21

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -20,7 +20,7 @@
 \newcommand{\stardocsource}    {sc\stardocnumber}
 \newcommand{\stardoccopyright} {Copyright \copyright\ 2014 Science and Technology Facilities Council}
 \newcommand{\stardocnumber}    {21.2}
-\newcommand{\stardocauthors}   {H. S. Thomas}
+\newcommand{\stardocauthors}   {H.\ S.\ Thomas, M.\ J.\ Currie}
 \newcommand{\stardocdate}      {11 June 2014}
 \newcommand{\stardoctitle}     {The SCUBA-2 Data Reduction Cookbook}
 \newcommand{\stardocversion}   {1.3}
