docs: Better spacing for html in "Observing modes" section of SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -854,7 +854,7 @@ in preference to tiling multiple smaller maps. Ultimately it is the
 size of the SCUBA-2 field-of-view that determines the sensitivity to
 large-scale structure.
 \end{minipage}
-\\ \\ \\
+\latex{\\ \\ \\}
 \begin{minipage}[t]{0.15\linewidth}
 \textbf{DAISY}
 \end{minipage}
@@ -866,7 +866,7 @@ pattern that has the advantage of keeping the source on the array
 throughout the observation. This is shown in the top panel of
 \cref{Figure}{fig:scan}{the figure below}.
 \end{minipage}
-\vspace{1.5cm}\\
+\latex{\vspace{1.5cm}}\\
 \textbf{Why these patterns?}\\*
 SCUBA-2 removes atmospheric noise in the data
 processing stage (Holland et al. 2013) \cite{s2main}. The power spectrum
